--- a/src/sass/_root.scss
+++ b/src/sass/_root.scss
@@ -1,6 +1,6 @@
 /**
-* Halcyon.css main root styles
-* @Author: Sebastian Muchui
+* Halcyon.css main root styles 
+* @Author: Sebastian Muchui K
 * About: 
 * Halcyon.css aims at getting fine looking websites without
 * tne use of extremely long class names
