--- a/src/sass/_displays.scss
+++ b/src/sass/_displays.scss
@@ -1,15 +1,3 @@
-/**
-* Halcyon.css displays [Grid, Flex, Block, ....]
-* @Author: Sebastian Muchui K
-* About: 
-* Halcyon.css aims at getting fine looking websites without
-* tne use of extremely long class names
-* Year: 2023
-* LICENSE: MIT
-*/
-
-/* GRID */
-
 $columns:(1,2,3,4,5,6,7); // Grid Columns
 
 @each $col in $columns
@@ -23,7 +11,9 @@ $columns:(1,2,3,4,5,6,7); // Grid Columns
 }
 
 
-/* ITEM ARRANGEMENT */
+*
+{
+
 
 .center-xy
 {
@@ -61,4 +51,5 @@ $columns:(1,2,3,4,5,6,7); // Grid Columns
     {
         margin-bottom: 10px;
     }
+}
 }
