--- a/src/sass/_root.scss
+++ b/src/sass/_root.scss
@@ -1,11 +1,10 @@
 
-@import "colors";
-@import 'displays';
-@import 'typography';
-@import 'buttons';
-@import 'functions';
-
-@import 'anime';
+@import 'colors/colors';
+@import 'displays/displays';
+@import 'typography/typography';
+@import 'buttons/buttons';
+@import 'functions/functions';
+@import 'animations/anime';
 
 
 
