More modularizations and examples

--- a/src/sass/_root.scss
+++ b/src/sass/_root.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 @import 'colors/colors';
 @import 'displays/displays';
 @import 'typography/typography';
