--- a/src/sass/colors/_colors.scss
+++ b/src/sass/colors/_colors.scss
@@ -1,9 +1,21 @@
+/**
+* Halcyon.css colors
+* @Author: Sebastian Muchui K
+* About: 
+* Halcyon.css aims at getting fine looking websites without
+* tne use of extremely long class names
+* Year: 2023
+* LICENSE: MIT
+*/
+
+
+
 $black: lighten(#222222, 3%);
 $white: darken(#ffffff, 10);
 $pink: #f32b88;
 $blue: #23a1eb;
-$green: #24d86c;
+$green: #0fc458;
 $gold: #cebd04;
-$grey: #cecdcd;
-$red: #931b1b;
+$grey: #818080;
+$red: #c02828;
 $purple: #4b036e;
