--- a/src/sass/typography/_typography.scss
+++ b/src/sass/typography/_typography.scss
@@ -1,3 +1,12 @@
+/**
+* Halcyon.css typography
+* @Author: Sebastian Muchui K
+* About: 
+* Halcyon.css aims at getting fine looking websites without
+* tne use of extremely long class names
+* Year: 2023
+* LICENSE: MIT
+*/
 
 .text-black
 {
