Cleaning up the code

--- a/src/sass/animations/_anime.scss
+++ b/src/sass/animations/_anime.scss
@@ -3,7 +3,7 @@
 * @Author: Sebastian Muchui K
 * About: 
 * Halcyon.css aims at getting fine looking websites without
-* tne use of extremely long class names
+* the use of extremely long class names
 * Year: 2023
 * LICENSE: MIT
 */
