--- a/src/sass/halcyon.scss
+++ b/src/sass/halcyon.scss
@@ -1,3 +1,13 @@
+
+/**
+* Halcyon.css
+* Author: Sebastian Muchui K
+* About: Halcyon.css aims at getting fine looking websites without
+* the use of extremely long class names
+* Year: 2023
+* LICENSE: MIT
+*/
+
 @import 'root';
 
 body
@@ -10,4 +20,11 @@ body
         height: 100vh;
         width: 80vw;
     }
+
 }
+
+
+/**
+* Halcyon.css
+* Made with ❤️‍🔥 by @astianmuchui
+*/
