--- a/src/sass/_root.scss
+++ b/src/sass/_root.scss
@@ -1,3 +1,12 @@
+/**
+* Halcyon.css
+* Author: Sebastian Muchui K
+* About: Halcyon.css aims at getting fine looking websites without
+* the use of extremely long class names
+* Year: 2023
+* LICENSE: MIT
+*/
+
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 @import 'colors/colors';
 @import 'displays/displays';
