--- a/src/sass/displays/_displays.scss
+++ b/src/sass/displays/_displays.scss
@@ -1,5 +1,5 @@
 /**
-* Halcyon.css colors
+* Halcyon.css displays
 * @Author: Sebastian Muchui K
 * About: 
 * Halcyon.css aims at getting fine looking websites without
