--- a/src/sass/_root.scss
+++ b/src/sass/_root.scss
@@ -1,11 +1,11 @@
 /**
 * Halcyon.css
-* Author: Sebastian Muchui K
+* Author: Sebastian Muchui Kamankura
 * About: Halcyon.css aims at getting fine looking websites without
 * the use of extremely long class names
 * Year: 2023
 * LICENSE: MIT
-
+* Have fun :)
 */
 
 @import 'colors/colors';
