Added more comments to the code

--- a/src/sass/halcyon.scss
+++ b/src/sass/halcyon.scss
@@ -1,11 +1,11 @@
 /**
-* Halcyon.css
+* Halcyon.css main gateway file
 * Author: Sebastian Muchui K
-* About: Halcyon.css aims at getting fine looking websites without
-* the use of extremely long class names
 * Year: 2023
 * LICENSE: MIT
 */
+
+/* Compile this file to get the whole framework */
 
 @import 'root';
 
