--- a/src/sass/backgrounds/_backgrounds.scss
+++ b/src/sass/backgrounds/_backgrounds.scss
@@ -1,9 +1,6 @@
 /**
-* Halcyon.css background
+* Halcyon.css backgrounds
 * @Author: Sebastian Muchui K
-* About: 
-* Halcyon.css aims at getting fine looking websites without
-* tne use of extremely long class names
 * Year: 2023
 * LICENSE: MIT
 */
