--- a/src/sass/resizes/_resize.scss
+++ b/src/sass/resizes/_resize.scss
@@ -13,7 +13,7 @@ $widths: (5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90,
     {
 
         // Set the width to that corresponding percentage
-        
+        width: calc(#{$w}/ 100);
     }
 
 
