TEST WEBSITE \n Building a mini website to test all the classes

--- a/src/sass/backgrounds/_backgrounds.scss
+++ b/src/sass/backgrounds/_backgrounds.scss
@@ -8,3 +8,50 @@
 *{
     background: #fff;
 }
+
+/* If you are working on this... Make sure you consider all colors in the colors file */
+
+.bg-black
+{
+    background-color: $black;
+}
+
+.bg-white
+{
+    background-color: $white;
+}
+
+.bg-grey
+{
+    background-color: $grey;
+}
+
+.bg-gold
+{
+    background-color: $gold;
+}
+
+.bg-green
+{
+    background-color: $green;
+}
+
+.bg-blue
+{
+    background-color: $blue;
+}
+
+.bg-pink
+{
+    background-color: $pink;
+}
+
+.bg-red
+{
+    background-color: $red;
+}
+
+.bg-purple
+{
+    background-color: $purple;
+}
