--- a/src/sass/colors/_colors.scss
+++ b/src/sass/colors/_colors.scss
@@ -7,12 +7,12 @@
 
 
 
-$black: lighten(#222222, 3%);
+$black: lighten(#0e0e0e, 3%);
 $white: darken(#ffffff, 10);
 $pink: #f32b88;
 $blue: #23a1eb;
 $green: #0fc458;
 $gold: #cebd04;
-$grey: #818080;
+$grey: #a3a3a3;
 $red: #c02828;
 $purple: #4b036e;
