--- a/src/sass/_root.scss
+++ b/src/sass/_root.scss
@@ -4,7 +4,6 @@
 * Author: Sebastian Muchui Kamankura
 * Year: 2023
 * LICENSE: MIT
-* Have fun :)
 */
 
 @import url('https://fonts.googleapis.com/css?family=Poppins');
@@ -16,7 +15,7 @@
 @import 'functions/functions';
 
 
-/* Resets  */
+/* Resets and defaults */
 
 *
 {
