--- a/src/sass/typography/_typography.scss
+++ b/src/sass/typography/_typography.scss
@@ -45,6 +45,11 @@
     color: $purple;
 }
 
+.text-pink
+{
+    color: $pink;
+}
+
 .text-center
 {
     text-align: center;
@@ -68,6 +73,11 @@
 .text-small
 {
     font-size: 14px;
+}
+
+.text-medium
+{
+    font-size: 16px;
 }
 
 .text-big
