Remove default background

--- a/src/sass/backgrounds/_backgrounds.scss
+++ b/src/sass/backgrounds/_backgrounds.scss
@@ -6,7 +6,7 @@
 */
 
 *{
-    background: #fff;
+    background: transparent;
 }
 
 /* If you are working on this... Make sure you consider all colors in the colors file */
