Added new colors

--- a/src/sass/colors/_colors.scss
+++ b/src/sass/colors/_colors.scss
@@ -5,6 +5,10 @@
 * LICENSE: MIT
 */
 
+/**
+* Should you change any color here, re-compile the framework
+* Also edit the buttons, typography and backgrounds file to make appropriate updates
+*/
 
 
 $black: lighten(#0e0e0e, 3%);
@@ -16,3 +20,44 @@ $gold: #cebd04;
 $grey: #a3a3a3;
 $red: #c02828;
 $purple: #4b036e;
+$navy: #000612;
+$orange: #ed7e0f;
+$yellow: #e5e513;
+$brown: #964b00;
+$teal: #008080;
+$maroon: #770404;
+$olive: #808000;
+$lime: #1bf71b;
+$indigo: #49007d;
+$skyblue: #9cddf7;
+$darkblue: #00008b;
+$darkgreen: #025a02;
+$darkred: #8b0000;
+$darkgrey: #a9a9a9;
+$darkpurple: #4b0082;
+$darkpink: #ff1493;
+$darkorange: #ff8c00;
+$darkyellow: #ffd700;
+$darkbrown: #8b4513;
+$darkteal: #008b8b;
+$darkmaroon: #800000;
+$darkolive: #556b2f;
+$darklime: #32cd32;
+$darkindigo: #4b0082;
+$darkskyblue: #00bfff;
+$lightgrey: #d3d3d3;
+$lightpurple: #9370db;
+$lightpink: #ffb6c1;
+$lightorange: #ffa500;
+$lightyellow: #ffffe0;
+$lightbrown: #deb887;
+$lightteal: #40e0d0;
+$lightmaroon: #b03060;
+$lightolive: #bdb76b;
+$lightlime: #90ee90;
+$lightindigo: #9370db;
+$lightskyblue: #87cefa;
+$transparent: transparent;
+$inherit: inherit;
+$initial: initial;
+$unset: unset;
