Update typography to match colors

--- a/src/sass/typography/_typography.scss
+++ b/src/sass/typography/_typography.scss
@@ -13,8 +13,185 @@
     color: $darkorange;
 }
 
+.text-navy
+{
+    color: $navy;
+}
 
+.text-yellow
+{
+    color: $yellow;
+}
 
+.text-brown
+{
+    color: $brown;
+}
+
+.text-teal
+{
+    color: $teal;
+}
+
+.text-maroon
+{
+    color: $maroon;
+}
+
+.text-olive
+{
+    color: $olive;
+}
+
+.text-lime
+{
+    color: $lime;
+}
+
+.text-indigo
+{
+    color: $indigo;
+}
+
+.text-skyblue
+{
+    color: $skyblue;
+}
+
+.text-darkblue
+{
+    color: $darkblue;
+}
+
+.text-darkgreen
+{
+    color: $darkgreen;
+}
+
+.text-darkred
+{
+    color: $darkred;
+}
+
+.text-darkgrey
+{
+    color: $darkgrey;
+}
+
+.text-darkpurple
+{
+    color: $darkpurple;
+}
+
+.text-darkpink
+{
+    color: $darkpink;
+}
+
+.text-darkorange
+{
+    color: $darkorange;
+}
+
+.text-darkyellow
+{
+    color: $darkyellow;
+}
+
+.text-darkbrown
+{
+    color: $darkbrown;
+}
+
+.text-darkteal
+{
+    color: $darkteal;
+}
+
+.text-darkmaroon
+{
+    color: $darkmaroon;
+}
+
+.text-darkolive
+{
+    color: $darkolive;
+}
+
+.text-darklime
+{
+    color: $darklime;
+}
+
+.text-darkindigo
+{
+    color: $darkindigo;
+}
+
+.text-darkskyblue
+{
+    color: $darkskyblue;
+}
+
+.text-lightgrey
+{
+    color: $lightgrey;
+}
+
+.text-lightpurple
+{
+    color: $lightpurple;
+}
+
+.text-lightpink
+{
+    color: $lightpink;
+}
+
+.text-lightorange
+{
+    color: $lightorange;
+}
+
+.text-lightyellow
+{
+    color: $lightyellow;
+}
+
+.text-lightbrown
+{
+    color: $lightbrown;
+}
+
+.text-lightteal
+{
+    color: $lightteal;
+}
+
+.text-lightmaroon
+{
+    color: $lightmaroon;
+}
+
+.text-lightolive
+{
+    color: $lightolive;
+}
+
+.text-lightlime
+{
+    color: $lightlime;
+}
+
+.text-lightindigo
+{
+    color: $lightindigo;
+}
+
+.text-lightskyblue
+{
+    color: $lightskyblue;
+}
 
 .text-black
 {
