--- a/src/sass/colors/_colors.scss
+++ b/src/sass/colors/_colors.scss
@@ -16,7 +16,7 @@ $white: darken(#ffffff, 10);
 $pink: #f32b88;
 $blue: #23a1eb;
 $green: #0fc458;
-$gold: #cebd04;
+$gold: #c1b20e;
 $grey: #a3a3a3;
 $red: #c02828;
 $purple: #4b036e;
@@ -28,7 +28,7 @@ $teal: #008080;
 $maroon: #770404;
 $olive: #808000;
 $lime: #1bf71b;
-$indigo: #49007d;
+$indigo: #4b077c;
 $skyblue: #9cddf7;
 $darkblue: #00008b;
 $darkgreen: #025a02;
@@ -36,24 +36,24 @@ $darkred: #8b0000;
 $darkgrey: #a9a9a9;
 $darkpurple: #4b0082;
 $darkpink: #ff1493;
-$darkorange: #ff8c00;
-$darkyellow: #ffd700;
+$darkorange: #ff9411;
+$darkyellow: #ffdd1c;
 $darkbrown: #8b4513;
 $darkteal: #008b8b;
 $darkmaroon: #800000;
 $darkolive: #556b2f;
 $darklime: #32cd32;
 $darkindigo: #4b0082;
-$darkskyblue: #00bfff;
-$lightgrey: #d3d3d3;
-$lightpurple: #9370db;
-$lightpink: #ffb6c1;
-$lightorange: #ffa500;
+$darkskyblue: #0faee4;
+$lightgrey: #c5bfbf;
+$lightpurple: #9677d3;
+$lightpink: #de8d99;
+$lightorange: #f2ac2b;
 $lightyellow: #ffffe0;
-$lightbrown: #deb887;
-$lightteal: #40e0d0;
-$lightmaroon: #b03060;
+$lightbrown: #d7b07d;
+$lightteal: #38cfc0;
+$lightmaroon: #b33f69;
 $lightolive: #bdb76b;
 $lightlime: #90ee90;
-$lightindigo: #9370db;
-$lightskyblue: #87cefa;
+$lightindigo: #9b7fd3;
+$lightskyblue: #95cef2;
