--- a/src/sass/animations/_anime.scss
+++ b/src/sass/animations/_anime.scss
@@ -5,6 +5,8 @@
 * LICENSE: MIT
 */
 
+    $overshoot: 5px;
+    $delay: 0.5;
 
 @keyframes fade
 { 
@@ -49,7 +51,7 @@
     75%
     { 
 
-        left: 5px;
+        left: $overshoot;
         opacity: 0.75;
     }
 
@@ -88,7 +90,7 @@
     75%
     { 
 
-        right: 5px;
+        right: $overshoot;
         opacity: 0.75;
     }
 
@@ -127,7 +129,7 @@
     75%
     { 
 
-        top: 5px;
+        top: $overshoot;
         opacity: 0.75;
     }
 
@@ -166,7 +168,7 @@
     75%
     { 
 
-        bottom: 5px;
+        bottom: $overshoot;
         opacity: 0.75;
     }
 
@@ -185,15 +187,15 @@
     0%
     { 
 
-        left: 0px;
-        opacity: 0;
+        left: $overshoot;
+        opacity: 1;
     }
 
     25%
     { 
 
         left: 5px;
-        opacity: 0.25;
+        opacity: 0.75;
     }
 
     50%
@@ -207,14 +209,14 @@
     { 
 
         left: -30px;
-        opacity: 0.75;
+        opacity: 0.25;
     }
 
     100%
     { 
 
         left: -50px;
-        opacity: 1;
+        opacity: 0;
     }
 }
 
@@ -224,15 +226,15 @@
     0%
     { 
 
-        right: 0px;
-        opacity: 0;
+        right: $overshoot;
+        opacity: 1;
     }
 
     25%
     { 
 
         right: 5px;
-        opacity: 0.25;
+        opacity: 0.75;
     }
 
     50%
@@ -246,14 +248,14 @@
     { 
 
         right: -30px;
-        opacity: 0.75;
+        opacity: 0.25;
     }
 
     100%
     { 
 
         right: -50px;
-        opacity: 1;
+        opacity: 0;
     }
 }
 
@@ -263,15 +265,15 @@
     0%
     { 
 
-        top: 0px;
-        opacity: 0;
+        top: $overshoot;
+        opacity: 1;
     }
 
     25%
     { 
 
         top: 5px;
-        opacity: 0.25;
+        opacity: 0.75;
     }
 
     50%
@@ -285,14 +287,14 @@
     { 
 
         top: -30px;
-        opacity: 0.75;
+        opacity: 0.25;
     }
 
     100%
     { 
 
         top: -50px;
-        opacity: 1;
+        opacity: 0;
     }
 }
 
@@ -303,14 +305,14 @@
     { 
 
         bottom: 0px;
-        opacity: 0;
+        opacity: 1;
     }
 
     25%
     { 
 
         bottom: 5px;
-        opacity: 0.25;
+        opacity: 0.75;
     }
 
     50%
@@ -324,14 +326,14 @@
     { 
 
         bottom: -30px;
-        opacity: 0.75;
+        opacity: 0.25;
     }
 
     100%
     { 
 
         bottom: -50px;
-        opacity: 1;
+        opacity: 0;
     }
 }
 
@@ -419,11 +421,24 @@
     position: relative;
     opacity: 0;
     animation-duration: 1s;
-    animation-delay: 0.5s;
+    animation-delay: #{$delay} + "s";
     animation-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+    transition-property: all;
+
+    /**
+        * Add delay time to child classes of the animate classes
+        * To prevent concurrent occurences of animations
+    */
+
+    *
+    {
+        animation-delay: #{$delay + 1} + "s";
+    }
+
 }
+
 
 
 .animate-left
