--- a/src/sass/effects/_effects.scss
+++ b/src/sass/effects/_effects.scss
@@ -4,3 +4,17 @@
 * Year: 2023
 * LICENSE: MIT
 */
+
+
+    .n-stick
+    {
+
+        position: sticky;
+        top: 0;
+        z-index: 999;
+    }
+
+    .nn-stick
+    {
+        position: relative;
+    }
