--- a/src/sass/halcyon.scss
+++ b/src/sass/halcyon.scss
@@ -5,5 +5,10 @@
 * LICENSE: MIT
 */
 
-/* Compile this file to get the whole framework */
+/**
+* Compile this file to get the whole framework
+* The main file can be found at /dist/
+* Have fun :)
+*/
+
 @import 'root';
